 - Contingence also can apply Amnesia.
 - Item prefixes no longer affect an item's alphabetical sorting.
 - Renaming an item can no longer modify the prefix or the boost count.
 - Uncrafted items now display their mask name if in an ingredient list. Additionally, the color of an ingredient now changes depending on if the player has enough of the item.
 - Being defeated by a Lost Soul in the Great Pyramid will now send you back to the start of the dungeon instead of giving a game over.
 - Raw Meat and Salt-Grilled Meat have been changed to Raw Bear Meat and Salt-Grilled Bear Meat, respectively.
 - Many food-related items have been made renewable, thus being removed from Dalia's shop.
 - Unknown enemy weaknesses now show a question mark icon.
 - Removed the item discard feature, since I'm pretty sure not a single person has ever used it once and it was just menu clutter.
 - Removed the Raw Fish and Cooked Fish items due to the new fishing system having specific types of fish and dishes.
 - The night overlay now shows in battle.
 - Moved Change of Heart to the Magic skill category.
 - Presents now have a 50% drop chance on December 25th rather than the default 20%.
 - The new Speedster Boots have replaced the spot in boot progression once held by the Hermes Boots. The Hermes Boots have been moved up to be tellurium-tier equipment.
 - Red Gel can now be used on party members in battle.
 - Sharpened battleback images.
 - Countless other small changes have been made throughout the game (not as much as Alpha 14, but still a lot of new quality-of-life stuff).

Music Update (Final Wave):
 - Redid "New Lands", "Winding Labyrinth".
 - Updated "Inevitable Confrontation".

Balancing:
 - You can no longer equip more than one of the same accessory on a single party member.
 - State resistance accessories no longer remove already applied states when equipped.
 - Heavily rebalanced stat allocation.