@@ -193,7 +193,7 @@ var $plugins =
 {"name":"Galv_RandEncounterConditions","status":true,"description":"(v.1.2) Have random encounter troops only appear in certain conditions","parameters":{}},
 {"name":"--------------------","status":false,"description":"------------------------------------------------------------","parameters":{}},
 {"name":"--------------------","status":false,"description":"------------------------------------------------------------","parameters":{}},
-{"name":"ARP_CommandIcons","status":true,"description":"v1.01 Adds Icons to command windows\r\n<ARP_ComIcons>","parameters":{"Scenes To Draw":"Scene_Menu Scene_Title Scene_Equip Scene_Status Scene_Item Scene_Battle Scene_Shop Scene_Skill Scene_GameEnd Scene_Save Scene_Load Scene_StatAllocation Scene_Synthesis Scene_EquipCustomize Scene_Gameover Scene_Fishing","Command Icons Batch 1":"Items: 560, Archaic Hourglass: 280, Skills: 115, Learn Skills: 14, Arrows: 133, Special: 164, Magic: 165, Passive: 121, Equipment: 162, Stat Allocation: 14, Allocate: 14, Revert: 119, Don't Revert: 122, Status: 234, Team Setup: 121, Quest Log: 230, Quick Access Menu: 495, Collection: 224, Music: 255, Options: 225, Save & Load: 231, Debug: 341, Close Game: 368, To Title: 12","Command Icons Batch 2":"New Game: 224, Load Game: 231, Credits: 495, Tutorial Tips: 4, Discord: 603, Shut Down: 6","Command Icons Batch 3":"Equip: 170, Customize: 232, Optimize: 495, Clear: 119, Finish: 122, General: 121, Stats: 14, Attributes: 12, Info: 234, Elements: 96, States: 104","Command Icons Batch 4":"Cast Line: 143, Equip Rod: 691, Equip Bait: 693, Stop Fishing: 12","Command Icons Batch 5":"Items: 261, Key Items: 243, Weapons: 147, Armor: 170, Recovery: 192, Buffs: 269, Debuffs: 319, Upgraders: 232, Foodstuffs: 297, Fishing: 292, Materials: 331, Drops: 196, Vanity: 442, Memorabilia: 542, Trophies: 532, Usable: 307, Field: 224, Battle: 551, Misc.: 201","Command Icons Batch 6":"Boost: 187, Unboost: 184, Guard: 13, Swap Out: 12, Fight: 116, Run Away: 12, Buy: 262, Sell: 512, Skills: 115, Magic: 165, Sure you quittin'?: 1, Cancel: 119, Load: 234, Save: 236, Delete: 237, Rename Save: 239, Craft Item: 331, Craft Weapon: 391, Craft Armor: 493, Try Again: 338","=== WEAPON ICONS ===":"","Draw Weapon Icon":"true","Barehanded Icon":"116","Weapon Unique Icons":"0"}},
+{"name":"ARP_CommandIcons","status":true,"description":"v1.01 Adds Icons to command windows\r\n<ARP_ComIcons>","parameters":{"Scenes To Draw":"Scene_Menu Scene_Title Scene_Equip Scene_Status Scene_Item Scene_Battle Scene_Shop Scene_Skill Scene_GameEnd Scene_Save Scene_Load Scene_StatAllocation Scene_Synthesis Scene_EquipCustomize Scene_Gameover Scene_Fishing","Command Icons Batch 1":"Items: 560, Archaic Hourglass: 280, Skills: 115, Learn Skills: 14, Arrows: 133, Special: 164, Magic: 165, Passive: 121, Equipment: 162, Stat Allocation: 14, Allocate: 14, Revert: 119, Don't Revert: 122, Status: 234, Team Setup: 121, Quest Log: 230, Quick Access Menu: 495, Collection: 224, Music: 255, Options: 225, Save & Load: 231, Debug: 341, Close Game: 368, To Title: 12","Command Icons Batch 2":"New Game: 224, Load Game: 231, Credits: 495, Tutorial Tips: 4, Discord: 603, Shut Down: 6","Command Icons Batch 3":"Equip: 170, Customize: 232, Optimize: 495, Clear: 119, Finish: 122, General: 121, Stats: 14, Attributes: 12, Info: 234, Elements: 96, States: 104","Command Icons Batch 4":"Cast Line: 143, Equip Rod: 691, Equip Bait: 693, Stop Fishing: 12","Command Icons Batch 5":"Items: 261, Key Items: 243, Weapons: 147, Armor: 170, Recovery: 192, Buffs: 269, Debuffs: 319, Upgraders: 232, Foodstuffs: 297, Fishing: 292, Materials: 331, Drops: 196, Vanity: 442, Memorabilia: 542, Trophies: 532, Usable: 307, Field: 224, Battle: 551, Misc.: 201","Command Icons Batch 6":"Boost: 187, Unboost: 184, Guard: 13, Swap Out: 12, Fight: 116, Run Away: 12, Buy: 262, Sell: 512, Skills: 115, Magic: 165, Sure you quittin'?: 1, Cancel: 119, Load: 234, Save: 236, Delete: 237, Rename Save: 239, Craft Item: 331, Craft Weapon: 391, Craft Armor: 493, Craft Headgear: 659, Craft Bodygear: 169, Craft Footgear: 474, Craft Offhand: 507, Craft Accessory: 511, Craft Magic Equip: 368, Try Again: 338","=== WEAPON ICONS ===":"","Draw Weapon Icon":"true","Barehanded Icon":"116","Weapon Unique Icons":"0"}},
 {"name":"ARP_TitleCommandExit","status":true,"description":"v1.00 Adds an option in the title command window to close\r\ngame window.","parameters":{"Command Exit":"Shut Down","Show Exit":"true"}},
 {"name":"Irina_AutoMessageColor","status":true,"description":"<AutoMessageColor> RPG Maker MV version 1.6.2","parameters":{"TextCodeHighlighting":"","TextCodeBase":"..........","TCActorName":"1","TCPartyName":"1","TextCodeYepMsgCore":"..........","TCActorClass":"4","TCActorNickname":"4","TCPartyClass":"4","TCPartyNickname":"4","TCClassName":"5","TCItemName":"3","TCWeaponName":"3","TCArmorName":"3","TCEnemyName":"3","TCSkillName":"3","TCStateName":"3","TCItemIcon":"3","TCWeaponIcon":"3","TCArmorIcon":"3","TCSkillIcon":"3","TCStateIcon":"3","TextCodeYepExtMsg1":"..........","TCEnemyNamePack1":"4","TCEnemyTroop":"4","":"","WordHighlighting":"","TextColor1":"[]","TextColor2":"[]","TextColor3":"[]","TextColor4":"[]","TextColor5":"[]","TextColor6":"[]","TextColor7":"[]","TextColor8":"[]","TextColor9":"[]","TextColor10":"[]","TextColor11":"[]","TextColor12":"[]","TextColor13":"[]","TextColor14":"[]","TextColor15":"[]","TextColor16":"[]","TextColor17":"[]","TextColor18":"[\"Apocalypse\"]","TextColor19":"[]","TextColor20":"[]","TextColor21":"[]","TextColor22":"[]","TextColor23":"[]","TextColor24":"[]","TextColor25":"[]","TextColor26":"[]","TextColor27":"[]","TextColor28":"[]","TextColor29":"[]","TextColor30":"[]","TextColor31":"[]"}},
 {"name":"CP_Large_Sprite_Fix","status":true,"description":"Fixes an issue with large sprites appearing under ☆ passability tiles.","parameters":{"Terrain ID":"7","Large Followers":"Yes","Large Vehicles":"Yes"}},
