@@ -319,6 +319,7 @@ Changes:
  - Item prefixes no longer affect an item's alphabetical sorting.
  - Renaming an item can no longer modify the prefix or the boost count.
  - Uncrafted items now display their mask name if in an ingredient list. Additionally, the color of an ingredient now changes depending on if the player has enough of the item.
+ - The crafting menu now has sections for all equipment types.
  - Being defeated by a Lost Soul in the Great Pyramid will now send you back to the start of the dungeon instead of giving a game over.
  - Raw Meat and Salt-Grilled Meat have been changed to Raw Bear Meat and Salt-Grilled Bear Meat, respectively.
  - Many food-related items have been made renewable, thus being removed from Dalia's shop.
